[package]
name = "bevy-minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false, features = ["bevy_core_pipeline","bevy_render", "bevy_pbr", "x11", "bevy_sprite", "png", "bevy_text"]}
bevy-inspector-egui = { version = "0.21.0", optional = true }
board_plugin = { path = "board_plugin" }

[features]
default = []
debug = ["board_plugin/debug", "bevy-inspector-egui"]

[workspace]
members = [
    "board_plugin"
]
